fixed html overflow + firefox outline

--- a/scss/layout/_layout.scss
+++ b/scss/layout/_layout.scss
@@ -10,9 +10,13 @@
 @import "loading";
 @import "section";
 
-html.overflowHidden,
-html.overflowHidden > body {
+html.overflowHidden {
     overflow: hidden;
+
+    > body {
+        overflow: hidden;
+        height: auto;
+    }
 }
 
 main {
